update and fix controller layer test